fix: Update vertical alignment for external link icon in headings

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -115,7 +115,5 @@ h6:hover .anchor-link {
   width: 0.75em;
   height: 0.75em;
   margin-left: 5px;
-
-  top: 50%;
-  transform: translateY(-50%);
+  vertical-align: middle;
 }
